# dyn-inventory

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml
.github/workflows/: check-and-lint.yaml  release.yaml  test.yaml
dyn-inventory/: Cargo.toml
dyn-inventory/src/: args.rs  declare.rs  lib.rs
dyn-inventory/tests/: test_compile_fail.rs  test_inventory.rs  test_inventory_short.rs
dyn-inventory/tests/failures/: init_name_invalid_ident.rs  init_name_invalid_ident.stderr  init_name_keyword_ident.rs  init_name_keyword_ident.stderr  init_name_string_literal.rs  init_name_string_literal.stderr  is_not_dyn_compat.rs  is_not_dyn_compat.stderr  missing_comma_between_opts.rs  missing_comma_between_opts.stderr  missing_equals_in_opt.rs  missing_equals_in_opt.stderr  missing_semicolon_before_opts.rs  missing_semicolon_before_opts.stderr  test_basic_fail.rs  test_basic_fail.stderr
examples/cli-flags/: Cargo.toml
examples/cli-flags/src/: lib.rs
scripts/: readme.py
src/: args.rs  lib.rs
tests/: test_compile_fail.rs  test_inventory.rs  test_inventory_short.rs
tests/failures/: handle_name_invalid_ident.rs  handle_name_invalid_ident.stderr  handle_name_string_literal.rs  handle_name_string_literal.stderr  is_not_dyn_compat.rs  is_not_dyn_compat.stderr  macro_name_keyword_ident.rs  macro_name_keyword_ident.stderr  macro_name_string_literal.rs  macro_name_string_literal.stderr  missing_comma_between_opts.rs  missing_comma_between_opts.stderr  missing_equals_in_opt.rs  missing_equals_in_opt.stderr  missing_semicolon_before_opts.rs  missing_semicolon_before_opts.stderr  test_basic_fail.rs
